2002-07-14 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* removed mb-parser.jay and mb-tokenizer.cs

Sat Jul 13 19:38:03 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* expression.cs: check against the building corlib void type.

Sat Jul 13 19:35:58 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ecore.cs: fix for valuetype static readonly fields: when 
	initializing them, we need their address, not the address of a copy.

Sat Jul 13 17:32:53 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* typemanager.cs: register also enum_type in corlib.

Sat Jul 13 15:59:47 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.cs: allow calling this (but not base) initializers in structs.

Sat Jul 13 15:12:06 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ecore.cs: make sure we compare against the building base types
	in GetTypeSize ().

Sat Jul 13 15:10:32 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* typemanager.cs: fix TypeToCoreType() to handle void and object
	(corlib gets no more typerefs after this change).

2002-07-12  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (ArrayCreation.EmitArrayArguments): use
	Conv.Ovf.U4 for unsigned and Conv.Ovf.I4 for signed.

	(ArrayAccess.LoadArrayAndArguments): Use Conv_Ovf_I and
	Conv_Ovf_I_Un for the array arguments.  Even if C# allows longs as
	array indexes, the runtime actually forbids them.

	* ecore.cs (ExpressionToArrayArgument): Move the conversion code
	for array arguments here.

	* expression.cs (EmitLoadOpcode): System.Char is a U2, use that
	instead of the default for ValueTypes.

	(New.DoEmit): Use IsValueType instead of
	IsSubclassOf (value_type)
	(New.DoResolve): ditto.
	(Invocation.EmitCall): ditto.

	* assign.cs (Assign): ditto.

	* statement.cs (Unsafe): Ok, so I got the semantics wrong.
	Statements *are* currently doing part of their resolution during
	Emit.  

	Expressions do always resolve during resolve, but statements are
	only required to propagate resolution to their children.
