@@ -2886,10 +2886,17 @@ namespace Mono.CSharp {
 			if (!ec.IsStatic)
 				arg_idx++;
 
-			if (arg_idx <= 255)
-				ec.ig.Emit (OpCodes.Ldarga_S, (byte) arg_idx);
-			else
-				ec.ig.Emit (OpCodes.Ldarga, arg_idx);
+			if (is_ref){
+				if (arg_idx <= 255)
+					ec.ig.Emit (OpCodes.Ldarg_S, (byte) arg_idx);
+				else
+					ec.ig.Emit (OpCodes.Ldarg, arg_idx);
+			} else {
+				if (arg_idx <= 255)
+					ec.ig.Emit (OpCodes.Ldarga_S, (byte) arg_idx);
+				else
+					ec.ig.Emit (OpCodes.Ldarga, arg_idx);
+			}
 		}
 	}
 	
